# dockerProjectPython

./: Dockerfile  README.md  pyproject.toml
.github/archive/: action_with_parameter.yml  create_artefact.yml  hello.yml  syntax_check.yml
.github/workflows/: conditional.yml  create_artefact.yml  deliver_to_docker_registry.yml  first.yml  hello.yml  run_from_docker.yml  unittest.yml
app/: main.py  useful_commands.txt
tests/: test_addition.py
